Function that finds threshold for clustering. More results analysis.

--- a/notebooks/data_analysis.ipynb
+++ b/notebooks/data_analysis.ipynb
@@ -26,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,33 +36,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kmeans_result_1 = pd.read_excel('../dataset/kmeans_1.xlsx')\n",
-    "kmeans_result_2 = pd.read_excel('../dataset/kmeans_2.xlsx')\n",
+    "kmeans_result_1 = pd.read_excel('../dataset/kmeans_1+++.xlsx')\n",
+    "kmeans_result_2 = pd.read_excel('../dataset/kmeans_1++.xlsx')\n",
     "val_data = pd.read_excel('../dataset/val_dataset.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "1558"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 17
-    }
-   ],
+   "outputs": [],
    "source": [
-    "kmeans_result_2['Cluster'].nunique()"
+    "val_data = val_data[val_data['id'].isin(kmeans_result_1['id'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kmeans_result_2 = kmeans_result_2[kmeans_result_2['id'].isin(kmeans_result_1['id'])]"
    ]
   },
   {
@@ -74,7 +72,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "3273"
+       "3108"
       ]
      },
      "metadata": {},
@@ -82,69 +80,89 @@
     }
    ],
    "source": [
-    "val_data['Label_1'].nunique()"
+    "kmeans_result_1['Cluster'].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3108"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 56
+    }
+   ],
+   "source": [
+    "val_data2['Label_1'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.9035985163034518 0.9360047222781323 0.9195161875836584\n"
+      "0.8991176445417642 0.9299069354699603 0.9142531408270539\n"
      ]
     }
    ],
    "source": [
-    "cs = completeness_score(val_data['Label_1'], kmeans_result_1['Cluster'])\n",
-    "hs = homogeneity_score(val_data['Label_1'], kmeans_result_1['Cluster'])\n",
-    "vs = v_measure_score(val_data['Label_1'], kmeans_result_1['Cluster'])\n",
+    "cs = completeness_score(val_data2['Label_1'], kmeans_result_1['Cluster'])\n",
+    "hs = homogeneity_score(val_data2['Label_1'], kmeans_result_1['Cluster'])\n",
+    "vs = v_measure_score(val_data2['Label_1'], kmeans_result_1['Cluster'])\n",
     "print(cs, hs, vs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.8379827528066932 0.8946644185488747 0.8653964461872912\n"
+      "0.8974718539462319 0.9461513779603493 0.9211689423263723\n"
      ]
     }
    ],
    "source": [
-    "cs = completeness_score(val_data['Label_2'], kmeans_result_2['Cluster'])\n",
-    "hs = homogeneity_score(val_data['Label_2'], kmeans_result_2['Cluster'])\n",
-    "vs = v_measure_score(val_data['Label_2'], kmeans_result_2['Cluster'])\n",
+    "cs = completeness_score(val_data['Label_1'], kmeans_result_2['Cluster'])\n",
+    "hs = homogeneity_score(val_data['Label_1'], kmeans_result_2['Cluster'])\n",
+    "vs = v_measure_score(val_data['Label_1'], kmeans_result_2['Cluster'])\n",
     "print(cs, hs, vs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "auto_result_1 = pd.read_excel('../dataset/autoencoder_1.xlsx')\n",
-    "auto_result_2 = pd.read_excel('../dataset/autoencoder_1_50.xlsx')"
+    "auto_result_1 = pd.read_excel('../dataset/autoencoder_1++.xlsx')\n",
+    "auto_result_2 = pd.read_excel('../dataset/autoencoder_2++.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.8649823675950257 0.8729535696539152 0.8689496883009838\n"
+      "0.9471372590766728 0.8522209076871279 0.8971756591255426\n"
      ]
     }
    ],
@@ -157,14 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.8269841858165766 0.8761304952647186 0.8508482398091458\n"
+      "0.8320270517839141 0.7850262962760063 0.8078436195651942\n"
      ]
     }
    ],
@@ -177,12 +195,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_result_1 = pd.read_excel('../dataset/output_raw_1.xlsx')\n",
-    "raw_result_2 = pd.read_excel('../dataset/output_raw_2.xlsx')"
+    "raw_result_1 = pd.read_excel('../dataset/kmeans_ae_1.xlsx')\n",
+    "raw_result_2 = pd.read_excel('../dataset/kmeans_ae_2.xlsx')"
    ]
   },
   {
@@ -207,14 +225,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.8515063802221696 0.910802000032735 0.8801566432258678\n"
+      "0.9445704961733535 0.8595341594207899 0.9000482371402816\n"
      ]
     }
    ],
@@ -227,14 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.8028114631787978 0.9203356350365234 0.8575657859326102\n"
+      "0.8307499929993964 0.8041110799362081 0.8172135052775269\n"
      ]
     }
    ],
