--- a/notebooks/hierarchical-clustering.ipynb
+++ b/notebooks/hierarchical-clustering.ipynb
@@ -14,14 +14,14 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 8,
             "source": [
                 "def hierarchical(X, clusters):\r\n",
                 "    vectorizer = TfidfVectorizer()\r\n",
                 "    X = vectorizer.fit_transform(X)\r\n",
                 "\r\n",
                 "    t0 = time()\r\n",
-                "    hierarch = AgglomerativeClustering(n_clusters=clusters)\r\n",
+                "    hierarch = AgglomerativeClustering(n_clusters=clusters, linkage=\"average\", affinity=\"cosine\")\r\n",
                 "    pred = hierarch.fit_predict(X.toarray())\r\n",
                 "\r\n",
                 "    print(\"Clustering finished for %d clusters.\" % clusters)\r\n",
@@ -34,7 +34,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 9,
             "source": [
                 "df = pd.read_excel('../dataset/clean_dataset++.xlsx')\r\n",
                 "df"
@@ -43,48 +43,6 @@
                 {
                     "output_type": "execute_result",
                     "data": {
-                        "text/plain": [
-                            "          id  Label_1  Label_2                                 Original  \\\n",
-                            "0          0       45       12  #$ACETO.TRIA+SULFNEO+GRAM+NIST POM G LE   \n",
-                            "1          1       45       12  #$ACETO.TRIA+SULFNEO+GRAM+NIST POM G LE   \n",
-                            "2          2       45       12  #$ACETO.TRIA+SULFNEO+GRAM+NIST POM G LE   \n",
-                            "3          3       45       12  #$ACETO.TRIA+SULFNEO+GRAM+NIST POM G LE   \n",
-                            "4          4      291      153       #$BACTRONEO POM 20MG/G C/15G NEOQU   \n",
-                            "...      ...      ...      ...                                      ...   \n",
-                            "21111  21111     3258     1572                       ZYPRED SOL OFT 6ML   \n",
-                            "21112  21112     3258     1572                     ZYPRED SOL OFT C/6ML   \n",
-                            "21113  21113     3258     1572                     ZYPRED SOL OFT C/6ML   \n",
-                            "21114  21114     3258     1572                     ZYPRED SOL OFT C/6ML   \n",
-                            "21115  21115     3259     1572                 ZYPRED SUSP OFT 3ML  POS   \n",
-                            "\n",
-                            "       Quantity  Price  MUNICIPIO                     DATA  \\\n",
-                            "0             1  20.00  Nova Cruz  2020-07-07 00:00:00.000   \n",
-                            "1             1  20.00  Nova Cruz  2020-07-07 00:00:00.000   \n",
-                            "2             1  20.00  Nova Cruz  2020-07-07 00:00:00.000   \n",
-                            "3             1  20.00  Nova Cruz  2020-07-07 00:00:00.000   \n",
-                            "4             8  30.00  Nova Cruz  2020-06-10 00:00:00.000   \n",
-                            "...         ...    ...        ...                      ...   \n",
-                            "21111         2  68.63     POMBAL  2020-03-09 00:00:00.000   \n",
-                            "21112         1  70.84      PATOS  2020-07-13 00:00:00.000   \n",
-                            "21113         1  70.84      PATOS  2020-07-13 00:00:00.000   \n",
-                            "21114         1  70.84      PATOS  2020-07-13 00:00:00.000   \n",
-                            "21115         2  35.07   SERRARIA  2020-05-18 00:00:00.000   \n",
-                            "\n",
-                            "                          Text  \n",
-                            "0           ACETOTRIA SULFNEO   \n",
-                            "1           ACETOTRIA SULFNEO   \n",
-                            "2           ACETOTRIA SULFNEO   \n",
-                            "3           ACETOTRIA SULFNEO   \n",
-                            "4      BACTRONEO POMADA 20  15  \n",
-                            "...                        ...  \n",
-                            "21111             ZYPRED SOL 6  \n",
-                            "21112             ZYPRED SOL 6  \n",
-                            "21113             ZYPRED SOL 6  \n",
-                            "21114             ZYPRED SOL 6  \n",
-                            "21115            ZYPRED SUSP 3  \n",
-                            "\n",
-                            "[21116 rows x 9 columns]"
-                        ],
                         "text/html": [
                             "<div>\n",
                             "<style scoped>\n",
@@ -252,17 +210,59 @@
                             "</table>\n",
                             "<p>21116 rows × 9 columns</p>\n",
                             "</div>"
+                        ],
+                        "text/plain": [
+                            "          id  Label_1  Label_2                                 Original  \\\n",
+                            "0          0       45       12  #$ACETO.TRIA+SULFNEO+GRAM+NIST POM G LE   \n",
+                            "1          1       45       12  #$ACETO.TRIA+SULFNEO+GRAM+NIST POM G LE   \n",
+                            "2          2       45       12  #$ACETO.TRIA+SULFNEO+GRAM+NIST POM G LE   \n",
+                            "3          3       45       12  #$ACETO.TRIA+SULFNEO+GRAM+NIST POM G LE   \n",
+                            "4          4      291      153       #$BACTRONEO POM 20MG/G C/15G NEOQU   \n",
+                            "...      ...      ...      ...                                      ...   \n",
+                            "21111  21111     3258     1572                       ZYPRED SOL OFT 6ML   \n",
+                            "21112  21112     3258     1572                     ZYPRED SOL OFT C/6ML   \n",
+                            "21113  21113     3258     1572                     ZYPRED SOL OFT C/6ML   \n",
+                            "21114  21114     3258     1572                     ZYPRED SOL OFT C/6ML   \n",
+                            "21115  21115     3259     1572                 ZYPRED SUSP OFT 3ML  POS   \n",
+                            "\n",
+                            "       Quantity  Price  MUNICIPIO                     DATA  \\\n",
+                            "0             1  20.00  Nova Cruz  2020-07-07 00:00:00.000   \n",
+                            "1             1  20.00  Nova Cruz  2020-07-07 00:00:00.000   \n",
+                            "2             1  20.00  Nova Cruz  2020-07-07 00:00:00.000   \n",
+                            "3             1  20.00  Nova Cruz  2020-07-07 00:00:00.000   \n",
+                            "4             8  30.00  Nova Cruz  2020-06-10 00:00:00.000   \n",
+                            "...         ...    ...        ...                      ...   \n",
+                            "21111         2  68.63     POMBAL  2020-03-09 00:00:00.000   \n",
+                            "21112         1  70.84      PATOS  2020-07-13 00:00:00.000   \n",
+                            "21113         1  70.84      PATOS  2020-07-13 00:00:00.000   \n",
+                            "21114         1  70.84      PATOS  2020-07-13 00:00:00.000   \n",
+                            "21115         2  35.07   SERRARIA  2020-05-18 00:00:00.000   \n",
+                            "\n",
+                            "                          Text  \n",
+                            "0           ACETOTRIA SULFNEO   \n",
+                            "1           ACETOTRIA SULFNEO   \n",
+                            "2           ACETOTRIA SULFNEO   \n",
+                            "3           ACETOTRIA SULFNEO   \n",
+                            "4      BACTRONEO POMADA 20  15  \n",
+                            "...                        ...  \n",
+                            "21111             ZYPRED SOL 6  \n",
+                            "21112             ZYPRED SOL 6  \n",
+                            "21113             ZYPRED SOL 6  \n",
+                            "21114             ZYPRED SOL 6  \n",
+                            "21115            ZYPRED SUSP 3  \n",
+                            "\n",
+                            "[21116 rows x 9 columns]"
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 3
+                    "execution_count": 9
                 }
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 10,
             "source": [
                 "t0 = time()\r\n",
                 "df['Cluster 1'] = hierarchical(df['Text'], 3273)\r\n",
@@ -275,10 +275,10 @@
                     "name": "stdout",
                     "text": [
                         "Clustering finished for 3273 clusters.\n",
-                        "Done in 558.638773 seconds.\n",
+                        "Done in 558.000644 seconds.\n",
                         "Clustering finished for 1564 clusters.\n",
-                        "Done in 545.029391 seconds.\n",
-                        "Total: 1103.942396 seconds.\n"
+                        "Done in 547.644450 seconds.\n",
+                        "Total: 1105.903876 seconds.\n"
                     ]
                 }
             ],
@@ -286,7 +286,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 11,
             "source": [
                 "df.to_excel(\"../dataset/hierarch++.xlsx\", index=False)"
             ],
